--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,123 +1,186 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+
+
+const socialdark = ["/src/assets/social/dark/x.svg", "/src/assets/social/dark/mt.svg", "/src/assets/social/dark/lin.svg", "/src/assets/social/dark/ig.svg", "/src/assets/social/dark/tg.svg", "/src/assets/social/dark/yt.svg"];
+const sociallight = ["/src/assets/social/light/x.svg", "/src/assets/social/light/mt.svg", "/src/assets/social/light/lin.svg", "/src/assets/social/light/ig.svg", "/src/assets/social/light/tg.svg", "/src/assets/social/light/yt.svg"];
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
-		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
-</Layout>
+<Layout title="Alpha template | by Shapeshifter" desc="Single-screen personal portfolio/cv template">
+  <div
+    class="h-full w-full bg-white dark:bg-black flex flex-col justify-start items-center gap-8 px-4"
+  >
+    <!-- HEADER -->
+    <div
+      class="w-full flex flex-col lg:flex-row gap-8 md:gap-0 lg:justify-between lg:items-center bg-gradient-to-tr from-[#0052D4] via-[#4364F7] to-[#6FB1FC] rounded-[24px] p-4 md:p-16 text-black dark:text-white"
+    >
+      <img
+        class="block md:hidden"
+        width="128"
+        height="128"
+        src="/src/assets/pic.png"
+        alt="A description of my img."
+      />
+      <div class="space-y-4 md:space-y-4">
+        <h1 class="text-5xl lg:text-8xl text-white">Jensen Lakes</h1>
+        <p
+          class="w-fit uppercase px-4 py-2 border border-white text-white rounded-full text-base md:text-[24px]"
+        >
+          digital director
+        </p>
+      </div>
+      <img
+        class="hidden md:block"
+        width="256"
+        height="256"
+        src="/src/assets/pic.png"
+        alt="A description of my img."
+      />
+    </div>
 
-<style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
-</style>
+    <!-- ABOUT -->
+    <div
+      class="w-full p-4 md:p-16 border border-black dark:border-white rounded-[24px] text-black dark:text-white"
+    >
+      <p class="m-auto text-[24px] md:text-[32px] w-full">
+        Hi, I'm Jensen. I have over 10 years of experience as a digital director
+        with a multidisciplinary background. My main goal is to create
+        meaningful products that cause positive disruption.
+      </p>
+    </div>
+
+    <!-- SELECTED -->
+    <!-- Grid -->
+    <div
+      class="w-full h-full space-y-4 xl:space-y-0 xl:grid grid-cols-3 gap-4 text-[24px]"
+    >
+      <!-- Card -->
+      <div
+        class="w-full h-full flex flex-col justify-center items-stretch gap-4 md:gap-8 p-4 md:p-8 border border-black dark:border-white rounded-[24px] text-black dark:text-white"
+      >
+        <div class="w-full h-full md:flex justify-between group transition-all">
+          <p
+            class="text-black dark:text-white w-fit uppercase px-4 py-1 border border-black dark:border-white rounded-full cursor-pointer"
+          >
+            featured work
+          </p>
+        </div>
+        <div class="w-full h-full flex flex-col items-center justify-center">
+          <div class="w-full md:flex justify-between text-[24px] leading-tight">
+            <p class="w-full text-[#555]">Design Production</p>
+            <p class="w-fit text-[#555] hidden lg:inline">2023</p>
+          </div>
+          <div class="w-full md:flex justify-between text-[24px] leading-tight">
+            <p class="w-full text-[#555]">Design Production</p>
+            <p class="w-fit text-[#555] hidden lg:inline">2023</p>
+          </div>
+          <div class="w-full md:flex justify-between text-[24px] leading-tight">
+            <p class="w-full text-[#555]">Design Production</p>
+            <p class="w-fit text-[#555] hidden lg:inline">2023</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card -->
+      <div
+        class="w-full h-full flex flex-col justify-center items-stretch gap-4 md:gap-8 p-4 md:p-8 border border-black dark:border-white rounded-[24px] text-black dark:text-white"
+      >
+        <div class="w-full h-full md:flex justify-between group transition-all">
+          <p
+            class="text-black dark:text-white w-fit uppercase px-4 py-1 border border-black dark:border-white rounded-full cursor-pointer"
+          >
+            projects
+          </p>
+        </div>
+        <div class="w-full h-full flex flex-col items-center justify-center">
+          <div class="w-full md:flex justify-between text-[24px] leading-tight">
+            <p class="w-full text-[#555]">Design Production</p>
+            <p class="w-fit text-[#555] hidden lg:inline">2023</p>
+          </div>
+          <div class="w-full md:flex justify-between text-[24px] leading-tight">
+            <p class="w-full text-[#555]">Design Production</p>
+            <p class="w-fit text-[#555] hidden lg:inline">2023</p>
+          </div>
+          <div class="w-full md:flex justify-between text-[24px] leading-tight">
+            <p class="w-full text-[#555]">Design Production</p>
+            <p class="w-fit text-[#555] hidden lg:inline">2023</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card -->
+      <div
+        class="w-full h-full flex flex-col justify-center items-stretch gap-4 md:gap-8 p-4 md:p-8 border border-black dark:border-white rounded-[24px] text-black dark:text-white"
+      >
+        <div class="w-full h-full md:flex justify-between group transition-all">
+          <p
+            class="text-black dark:text-white w-fit uppercase px-4 py-1 border border-black dark:border-white rounded-full cursor-pointer"
+          >
+            recogitions
+          </p>
+        </div>
+        <div class="w-full h-full flex flex-col items-center justify-center">
+          <div class="w-full md:flex justify-between text-[24px] leading-tight">
+            <p class="w-full text-[#555]">Design Production</p>
+            <p class="w-fit text-[#555] hidden lg:inline">2023</p>
+          </div>
+          <div class="w-full md:flex justify-between text-[24px] leading-tight">
+            <p class="w-full text-[#555]">Design Production</p>
+            <p class="w-fit text-[#555] hidden lg:inline">2023</p>
+          </div>
+          <div class="w-full md:flex justify-between text-[24px] leading-tight">
+            <p class="w-full text-[#555]">Design Production</p>
+            <p class="w-fit text-[#555] hidden lg:inline">2023</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- FOOTER -->
+    <div
+      class="w-full h-full lg:flex justify-between space-y-4 lg:space-y-0 gap-4 text-[24px]"
+    >
+      <button
+        class="p-4 text-white bg-gradient-to-tr from-[#0052D4] via-[#4364F7] to-[#6FB1FC] w-full text-start xl:text-center rounded-[24px]"
+        >⚡︎ Open for remote/async offers</button
+      >
+      <button
+        class="p-4 text-white dark:text-black bg-black dark:bg-white w-full text-start xl:text-center rounded-[24px]"
+        >✉︎ jensen@jensenlakes.com</button
+      >
+      <div
+        class="w-full h-full p-4 text-black dark:text-white border border-black dark:border-white rounded-[24px]"
+      >
+        <div
+          class="w-full h-full flex dark:hidden justify-center items-center gap-2 md:gap-4"
+        >
+          {
+            sociallight.map((i) => (
+              <img
+                width="32"
+                height="32"
+                src={i}
+                alt="A description of my img."
+              />
+            ))
+          }
+          </div>
+          <div
+          class="w-full h-full hidden dark:flex justify-center items-center gap-2 md:gap-4"
+        >
+          {
+            socialdark.map((i) => (
+              <img
+                width="32"
+                height="32"
+                src={i}
+                alt="A description of my img."
+              />
+            ))
+          }
+          </div>
+         
+        </div>
+      </div>
+    </div>
+  </div>
+</Layout>
