--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const { title, desc } = Astro.props;
     <title>{title}</title>
   </head>
   <body
-    class="w-full min-h-screen h-full flex flex-col justify-center items-center antialiased box-border selection:bg-black selection:text-white dark:selection:bg-white dark:selection:text-black p-8 break-word"
+    class="w-full min-h-screen h-full flex flex-col justify-center items-center antialiased box-border selection:bg-black selection:text-white dark:selection:bg-white dark:selection:text-black p-8 break-word font-suisse"
   >
     <main class="w-full h-full">
       <slot />
