--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Header from '../components/Header.astro';
 interface Props {
   title: string;
   desc: string;
@@ -37,6 +38,7 @@ const { title, desc } = Astro.props;
   <body
     class="w-full min-h-screen h-full flex flex-col justify-center items-center antialiased box-border selection:bg-black selection:text-white dark:selection:bg-white dark:selection:text-black p-8 break-word font-suisse"
   >
+  <Header />
     <main class="w-full h-full">
       <slot />
     </main>
