build: created info grid

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,11 +6,11 @@ import { i } from "../info";
   class="w-full h-full lg:flex justify-between space-y-4 lg:space-y-0 gap-4 text-[24px]"
 >
   <button
-    class="p-4 text-white bg-gradient-to-tr from-[#0052D4] via-[#4364F7] to-[#6FB1FC] w-full text-start xl:text-center rounded-[24px]"
+    class="p-4 text-center text-white bg-gradient-to-tr from-[#0052D4] via-[#4364F7] to-[#6FB1FC] w-full xl:text-center rounded-[24px]"
     >{i.status}</button
   >
   <button
-    class="p-4 text-white dark:text-black bg-black dark:bg-white w-full text-start xl:text-center rounded-[24px]"
+    class="p-4 text-center text-white dark:text-black bg-black dark:bg-white w-full xl:text-center rounded-[24px]"
     >{i.email}</button
   >
   <div
