--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,61 +1,23 @@
 ---
+import CardContent from "./CardContent.astro";
 interface Props {
-	title: string;
-	body: string;
-	href: string;
+  title: string;
 }
 
-const { href, title, body } = Astro.props;
+const { title } = Astro.props;
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
-<style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 1px;
-		background-color: #23262d;
-		background-image: none;
-		background-size: 400%;
-		border-radius: 7px;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
-	}
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: calc(1.5rem - 1px);
-		border-radius: 8px;
-		color: white;
-		background-color: #23262d;
-		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-		background-image: var(--accent-gradient);
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent-light));
-	}
-</style>
+<div
+  class="w-full h-full flex flex-col justify-center items-stretch gap-4 md:gap-8 p-4 md:p-8 border border-black dark:border-white rounded-[24px] text-black dark:text-white"
+>
+  <div class="w-full h-full md:flex justify-between group transition-all">
+    <p
+      class="text-black dark:text-white w-fit uppercase px-4 py-1 border border-black dark:border-white rounded-full cursor-pointer"
+    >
+      {title}
+    </p>
+  </div>
+  <div class="w-full h-full flex flex-col items-center justify-center">
+    <slot />
+  </div>
+</div>
