style: updated gradients

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import { i } from "../info";
 ---
 
 <header
-  class="w-full flex flex-col lg:flex-row gap-8 md:gap-0 lg:justify-between lg:items-center bg-gradient-to-tr from-[#0052D4] via-[#4364F7] to-[#6FB1FC] rounded-[24px] p-4 md:p-16 text-black dark:text-white"
+  class="w-full flex flex-col lg:flex-row gap-8 md:gap-0 lg:justify-between lg:items-center bg-gradient rounded-[24px] p-4 md:p-16 text-black dark:text-white"
 >
   {
     i.photo && (
