--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ import { i } from "../info";
   class="w-full h-full lg:flex justify-between space-y-4 lg:space-y-0 gap-4 text-[24px]"
 >
   <button
-    class="p-4 text-center text-white bg-gradient-to-tr from-[#0052D4] via-[#4364F7] to-[#6FB1FC] w-full xl:text-center rounded-[24px]"
+    class="p-4 text-center text-white bg-gradient w-full xl:text-center rounded-[24px]"
     >{i.status}</button
   >
   <button
