style: changed global padding

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,7 +37,7 @@ const { title, desc } = Astro.props;
     <title>{title}</title>
   </head>
   <body
-    class="w-full min-h-screen h-full flex flex-col justify-center items-center antialiased box-border selection:bg-black selection:text-white dark:selection:bg-white dark:selection:text-black p-8 break-word font-suisse space-y-8"
+    class="w-full min-h-screen h-full flex flex-col justify-center items-center antialiased box-border selection:bg-black selection:text-white dark:selection:bg-white dark:selection:text-black p-4 md:p-8 break-word font-suisse space-y-8"
   >
   <Header />
     <main class="h-full w-full bg-white dark:bg-black flex flex-col justify-start items-center gap-8">
